<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".screens.FluffyGamesFragment"
    tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/floor"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="hole1,hole2,hole3,hole4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="status,balanceStatus"
        app:flow_verticalAlign="center"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <FrameLayout
        android:id="@+id/ballsPool"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ballHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/ballHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ball_holder"
        android:contentDescription="@string/ball" />

    <ImageView
        android:id="@+id/ballPlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/ballHolder"
        app:layout_constraintEnd_toEndOf="@+id/ballHolder"
        app:layout_constraintStart_toStartOf="@+id/ballHolder"
        app:layout_constraintTop_toTopOf="@+id/ballHolder"
        app:srcCompat="@drawable/ball_play"
        android:contentDescription="@string/play" />

    <ImageView
        android:id="@+id/hole1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="0.9"
        app:srcCompat="@drawable/hole_1"
        android:contentDescription="@string/coefficient_2_5" />

    <ImageView
        android:id="@+id/hole2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:srcCompat="@drawable/hole_2"
        android:contentDescription="@string/coefficient_0_5" />

    <ImageView
        android:id="@+id/hole3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:srcCompat="@drawable/hole_3"
        android:contentDescription="@string/coefficient_0_5" />

    <ImageView
        android:id="@+id/hole4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="0.9"
        app:srcCompat="@drawable/hole_4"
        android:contentDescription="@string/coefficient_1" />

    <ru.serebryakovas.lukoilmobileap.legacy.cortex.views.TraceView
        android:id="@+id/lineView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/balanceBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/score_bar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/balanceBar"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="@+id/balanceBar"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/balanceBar"
        app:layout_constraintTop_toTopOf="@+id/balanceBar"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/balanceStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/white"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>